overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body {
 }
 
 section > * {
-    overflow-x: hidden;
     margin-left: 15%;
     margin-right: 15%;
 }
